@@ -1,3 +1,6 @@
+2005-12-05  Colin O'Flynn <coflynn@newae.com>
+    * avrdude.conf.in: Added m162 support for stk500v2
+
 2005-12-01  Joerg Wunsch <j@uriah.heep.sax.de>
 
 	* avrdude.conf.in: fix the number of significant bits for
